--- a/Android/ListFragmentExample/app/src/main/res/layout/activity_main.xml
+++ b/Android/ListFragmentExample/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <fragment
-        android:name="com.zaoqibu.listfragmentexample.MyListFragment"
+        android:name="com.zaoqibu.listfragmentexample.ProvincesListFragment"
         android:id="@+id/my_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
