--- a/Android/DownloadText/app/src/main/res/layout/activity_main.xml
+++ b/Android/DownloadText/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/textView" />
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/textView" />
+    </ScrollView>
 
 </RelativeLayout>
