--- a/Android/Resource/app/src/main/res/layout/activity_resource_string_type.xml
+++ b/Android/Resource/app/src/main/res/layout/activity_resource_string_type.xml
@@ -12,4 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView android:id="@+id/tvPlurals"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView android:id="@+id/tvEscaping"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
